- Github pages commit.

--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" />
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="styles.394c59724beab5eb6aa4.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.a42b10975ddde4a3b263.js"></script><script type="text/javascript" src="es2015-polyfills.a73a4bd3bc087c7d6656.js" nomodule></script><script type="text/javascript" src="polyfills.b2c31ebcc6c4a1fe2cb4.js"></script><script type="text/javascript" src="main.01f17d0cacbc56a0195c.js"></script></body>
 </html>
